# MAaALA

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  fill.c  index.c  printmat.c  rowexchange.c
chapter01/: example1.5.1.c
chapter03/: CMakeLists.txt  example3.10.1.c  example3.10.2.c  example3.10.4.c  example3.10.5.c  example3.7.3.c  problem3.10.1.c  problem3.10.2.c  problem3.3.1.md  problem3.3.2.md  problem3.5.1a.c  problem3.5.1d.c  problem3.5.1e.c  problem3.5.1g.c  problem3.5.1h.c  problem3.5.1i.c  problem3.5.1j.c  problem3.5.1k.c  problem3.5.2.c  problem3.5.3.md  problem3.5.4.md  problem3.5.6.md  problem3.5.7.md  problem3.5.8.md  problem3.6.1.md  problem3.6.2.md  problem3.6.3.md  problem3.6.5.md  problem3.6.6.md  problem3.6.7.md  problem3.7.1a.c  problem3.7.1b.c  problem3.7.1c.c  problem3.7.1d.c  problem3.7.1e.c  problem3.7.2.c  problem3.7.2.md  problem3.7.3.md  problem3.7.5.md  problem3.7.6.md  (+3 more)
chapter04/: CMakeLists.txt  problem4.2.1.c  problem4.3.1a.c  problem4.3.1b.c  problem4.3.1c.c  problem4.3.1d.c  problem4.3.1e.c  problem4.3.2.c  problem4.3.4.c  problem4.3.9.c  problem4.4.1.c  problem4.4.2.c  problem4.4.3.c  problem4.4.5.c  problem4.4.6.c  problem4.5.1.c  problem4.5.3.c  problem4.7.7.md  problem4.7.8.md
chapter1/: CMakeLists.txt  problem1.2.11.ipynb
chapter1/section2/: CMakeLists.txt  gauss.c  problem1.2.1.c  problem1.2.2.c  problem1.2.3.c  problem1.2.4.c  problem1.2.5.c  problem1.2.8.c  problem1.2.9.c
chapter1/section5/: CMakeLists.txt  check.c  example.c  example1.5.1.c  example1.5.2.c  example1.5.3.c  fl.h  gauss.c  gauss.h  matrix.c  matrix.h  problem1.5.1.c  problem1.5.2.c  problem1.5.3.c
chapter2/section1/: CMakeLists.txt  example2.1.1.c  example2.1.2.c  gauss.c  gauss.h  matrix.c  matrix.h
chapter2/section2/: CMakeLists.txt  example2.2.1.c  example2.2.3.c  gauss.c  gauss.h  problem2.2.1a.c  problem2.2.1b.c
include/: ala.h  matrix.h
src/: CMakeLists.txt  matrix.c
tests/: CMakeLists.txt  test_matrix.c
