add_executable(problem1.2.1 problem1.2.1.c gauss.c)
target_link_libraries(problem1.2.1 matrix)

add_executable(problem1.2.2 problem1.2.2.c gauss.c)
target_link_libraries(problem1.2.2 matrix)

add_executable(problem1.2.3 problem1.2.3.c gauss.c)
target_link_libraries(problem1.2.3 matrix)

add_executable(problem1.2.4 problem1.2.4.c gauss.c)
target_link_libraries(problem1.2.4 matrix)

add_executable(problem1.2.5 problem1.2.5.c gauss.c)
target_link_libraries(problem1.2.5 matrix)

add_executable(problem1.2.8 problem1.2.8.c gauss.c)
target_link_libraries(problem1.2.8 matrix)

add_executable(problem1.2.9 problem1.2.9.c gauss.c)
target_link_libraries(problem1.2.9 matrix)
