add_executable(example2.2.1 example2.2.1.c matrix.c gauss.c)
link_math(example2.2.1)

add_executable(example2.2.3 example2.2.3.c matrix.c gauss.c)
link_math(example2.2.3)

add_executable(problem2.2.1a problem2.2.1a.c matrix.c gauss.c)
link_math(problem2.2.1a)

add_executable(problem2.2.1b problem2.2.1b.c matrix.c gauss.c)
link_math(problem2.2.1b)
